moving around the DOM

--- a/access_dom/dom.html
+++ b/access_dom/dom.html
@@ -25,7 +25,13 @@
   <div id="target-area">
     <p>This is our target text</p>
   </div>
-  
+
+  <ul id="nav">
+    <li><a href="/" id="home">Home</a></li>
+    <li><a href="/about" id="about">About Us</a></li>
+    <li><a href="/contact" id="contact">Contact Us</a></li>
+  </ul>
+
 
   <script src="js/dom_examples.js"></script>
 </body>
