adding and removing elements

--- a/access_dom/dom.html
+++ b/access_dom/dom.html
@@ -23,7 +23,7 @@
   <img src="images/placeholder.png" class="show" alt="placeholder image" id="plc">
 
   <div id="target-area">
-    <p>This is our target text</p>
+    <p id="tagline">This is our target text</p>
   </div>
 
   <ul id="nav">
